syntax = "proto3";

package userPackage;

message ServerStreamUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string signInType = 4;
    string providerId = 5;
    repeated string categories = 6;
    string userRole = 7;
    string password = 8;
    int32 version = 9;
}

message UserModel {
    string id = 1;
    string name = 2;
    string email = 3;
    string signInType = 4;
    string userRole = 5;
    string providerId = 6;
    repeated string categories = 7;
    int32 version = 8;
}

message AllUsers {
    string serviceName = 1;
}

message GoogleUser {
    string sub = 1;
    string name = 2;
    string given_name = 3;
    string family_name = 4;
    string picture= 5;
    string email = 6;
    string email_verified = 7;
    string locale = 8;
}

message GitHubUser{
    string login = 1;
    int32 id = 2;
    string node_id = 3;
    string avatar_url = 4;
    string gravatar_id = 5;
    string url = 6;
    string html_url = 7;
    string followers_url = 8;
    string following_url = 9;
    string gists_url = 10;
    string starred_url = 11;
    string subscriptions_url = 12;
    string organizations_url = 13;
    string repos_url = 14;
    string events_url = 15;
    string received_events_url = 16;
    string type = 17;
    bool site_admin = 18;
    string name = 19;
    string company = 20;
    string blog = 21;
    string location = 22;
    string email = 23;
    bool hireable = 24;
    string bio = 25;
    string twitter_username = 26;
    int32 public_repos = 27;
    int32 public_gists = 28;
    int32 followers = 29;
    int32 following = 30;
    string created_at= 31;
    string updated_at= 32;
}

message LocalUser{
    string name = 1;
    string email = 2;
    string password = 3;
    bool type = 4;
}

message CreateUserInfo{
    int32 status = 1;
    string jwt = 2;
    UserModel user = 3;
}

message UserUpdate{
    string id = 1;
    string name = 2;
    string userRole = 3;
    repeated string categories = 4;
    string password = 5;
    string providerId = 6;
}

service UserService {
    rpc GetAllUsers(AllUsers) returns (stream ServerStreamUserResponse) {};
    rpc SaveGoogleUser(GoogleUser) returns (CreateUserInfo) {};
    rpc SaveGitHubUser(GitHubUser) returns (CreateUserInfo) {};
    rpc SaveLocalUser(LocalUser) returns (CreateUserInfo) {};
    rpc UpdateUser(UserUpdate) returns (UserModel) {};
}
