// Original file: src/clients/proto/user.proto


export interface GoogleUser {
  'sub'?: (string);
  'name'?: (string);
  'given_name'?: (string);
  'family_name'?: (string);
  'picture'?: (string);
  'email'?: (string);
  'email_verified'?: (string);
  'locale'?: (string);
}

export interface GoogleUser__Output {
  'sub': (string);
  'name': (string);
  'given_name': (string);
  'family_name': (string);
  'picture': (string);
  'email': (string);
  'email_verified': (string);
  'locale': (string);
}
